--- a/Binding/Android/Binding.Facebook.Common.Android/Binding.Facebook.Common.Android.csproj
+++ b/Binding/Android/Binding.Facebook.Common.Android/Binding.Facebook.Common.Android.csproj
@@ -9,8 +9,8 @@
     <ProjectTypeGuids>{10368E6C-D01B-4462-8E8B-01FC667A7035};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Binding.Facebook.Common.Android</RootNamespace>
-    <AssemblyName>Binding.Facebook.Common.Android</AssemblyName>
+    <RootNamespace>Stormlion.Facebook.Common.Droid</RootNamespace>
+    <AssemblyName>Stormlion.Facebook.Common.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
@@ -101,6 +101,9 @@
     <None Include="Additions\AboutAdditions.txt" />
     <LibraryProjectZip Include="Jars\facebook-common-4.28.0.aar" />
     <None Include="packages.config" />
+    <None Include="Stormlion.Facebook.Common.Android.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
