--- a/Facebook.Login.Form/Facebook.Login.Android/Facebook.Login.Android.csproj
+++ b/Facebook.Login.Form/Facebook.Login.Android/Facebook.Login.Android.csproj
@@ -10,7 +10,7 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Stormlion.Facebook.Login.Droid</RootNamespace>
+    <RootNamespace>Stormlion.Facebook.Login.Forms.Droid</RootNamespace>
     <AssemblyName>Stormlion.Facebook.Login.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
@@ -53,15 +53,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
-    <Reference Include="Stormlion.Facebook.Common.Android, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Stormlion.Facebook.Common.Android.4.28.0.1\lib\MonoAndroid\Stormlion.Facebook.Common.Android.dll</HintPath>
-    </Reference>
-    <Reference Include="Stormlion.Facebook.Core.Android, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Stormlion.Facebook.Core.Android.4.28.0.1\lib\MonoAndroid\Stormlion.Facebook.Core.Android.dll</HintPath>
-    </Reference>
-    <Reference Include="Stormlion.Facebook.Login.Android, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Stormlion.Facebook.Login.Android.4.28.0.1\lib\MonoAndroid\Stormlion.Facebook.Login.Android.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -140,6 +131,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Renderer\FBLoginButtonRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -148,6 +140,18 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Binding\Android\Binding.Facebook.Common.Android\Binding.Facebook.Common.Android.csproj">
+      <Project>{1ec932e6-0360-43fa-ac59-4c63a99d239c}</Project>
+      <Name>Binding.Facebook.Common.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Binding\Android\Binding.Facebook.Core.Android\Binding.Facebook.Core.Android.csproj">
+      <Project>{10b245f8-12e7-4246-86e4-54c3e19aa483}</Project>
+      <Name>Binding.Facebook.Core.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Binding\Android\Binding.Facebook.Login.Android\Binding.Facebook.Login.Android.csproj">
+      <Project>{85deff88-8880-4b67-93a1-905ebfe60d2f}</Project>
+      <Name>Binding.Facebook.Login.Android</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Facebook.Login\Facebook.Login.csproj">
       <Project>{3d67bd88-64a7-47e7-890d-7afff1a5d2b8}</Project>
       <Name>Facebook.Login</Name>
