--- a/Facebook.Common.Form/Facebook.Common.Android/packages.config
+++ b/Facebook.Common.Form/Facebook.Common.Android/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bolts" version="1.4.0.1" targetFramework="monoandroid80" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid80" />
+  <package id="Stormlion.Facebook.Common.Android" version="4.28.0.3" targetFramework="monoandroid80" />
+  <package id="Stormlion.Facebook.Core.Android" version="4.28.0.3" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.1" targetFramework="monoandroid80" />
   <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.0" targetFramework="monoandroid80" />
