Added FBAccessToken in iOS.

--- a/Facebook.Common.Form/Facebook.Common.iOS/Facebook.Common.iOS.csproj
+++ b/Facebook.Common.Form/Facebook.Common.iOS/Facebook.Common.iOS.csproj
@@ -55,6 +55,7 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FBAccessTokenImplement.cs" />
     <Compile Include="FBGraphRequestImplement.cs" />
     <Compile Include="FBLoginManagerImplement.cs" />
     <Compile Include="Platform.cs" />
