--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Stormlion.Facebook.Forms</id>
-    <version>0.1.0-beta</version>
+    <version>0.1.0</version>
     <authors>Marko Rothstein</authors>
     <owners>Marko Rothstein</owners>
     <projectUrl>https://github.com/stormlion227/Facebook.Forms</projectUrl>
